--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/wwayt?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#JPA
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.show-sql= true
